# vital-ontology

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  vital-0.1.0.owl  vital-0.2.0.owl  vital-0.2.250.owl  vital-0.2.251.owl  vital-0.2.252.owl  vital-0.2.253.owl  vital-0.2.254.owl  vital-0.2.255.owl  vital-0.2.300.owl  vital-0.2.301.owl  vital-0.2.302.owl  vital-0.2.303.owl  vital-0.2.304.owl  vital-core-0.1.0.owl  vital-core-0.2.0.owl  vital-core-0.2.250.owl  vital-core-0.2.251.owl  vital-core-0.2.252.owl  vital-core-0.2.253.owl  vital-core-0.2.254.owl  vital-core-0.2.255.owl  vital-core-0.2.300.owl  vital-core-0.2.301.owl  vital-core-0.2.302.owl  vital-core-0.2.303.owl  vital-core-0.2.304.owl  vital_env.env
domain-python/chat-ai-python/: README.md  pyproject.toml  setup.py
domain-python/chat-ai-python/ai_chat_domain/domain-ontology/: chat-ai-0.1.0.owl
domain-python/chat-ai-python/ai_chat_domain/model/: AIMPMessageMetaInfo.py  AIMPMessageMetaInfo.pyi  AcceptAccountInviteAdminRequest.py  AcceptAccountInviteAdminRequest.pyi  AcceptChatRequest.py  AcceptChatRequest.pyi  AcceptDeveloperRequest.py  AcceptDeveloperRequest.pyi  AcceptLoginChangeAdminRequest.py  AcceptLoginChangeAdminRequest.pyi  AcceptMemberInviteAdminRequest.py  AcceptMemberInviteAdminRequest.pyi  AcceptOwnerChangeAdminRequest.py  AcceptOwnerChangeAdminRequest.pyi  AcceptOwnerChangeRequest.py  AcceptOwnerChangeRequest.pyi  AccountQuotaSyncChatNotification.py  AccountQuotaSyncChatNotification.pyi  AddAccountAdminRequest.py  AddAccountAdminRequest.pyi  AddAccountLoginAdminRequest.py  AddAccountLoginAdminRequest.pyi  AddAccountOpportunityAdminRequest.py  AddAccountOpportunityAdminRequest.pyi  AddAgentAdminRequest.py  AddAgentAdminRequest.pyi  AddAgentDeveloperRequest.py  AddAgentDeveloperRequest.pyi  AddAgentInstanceDeveloperRequest.py  AddAgentInstanceDeveloperRequest.pyi  AddAppDeveloperRequest.py  AddAppDeveloperRequest.pyi  AddAssetRequest.py  AddAssetRequest.pyi  AddChatInteractionRequest.py  AddChatInteractionRequest.pyi  AddChatInteractionScenarioRequest.py  AddChatInteractionScenarioRequest.pyi  AddChatKGRequest.py  AddChatKGRequest.pyi  (+955 more)
domain-python/haley-ai-kg-python/: README.md  pyproject.toml  setup.py
domain-python/haley-ai-kg-python/ai_haley_kg_domain/model/: DomainCategory.py  DomainCategory.pyi  DomainOntology.py  Edge_hasActorKGFrame.py  Edge_hasActorKGFrame.pyi  Edge_hasAgentKGFrame.py  Edge_hasAgentKGFrame.pyi  Edge_hasChatMessageKGFrame.py  Edge_hasChatMessageKGFrame.pyi  Edge_hasDocumentKGFrame.py  Edge_hasDocumentKGFrame.pyi  Edge_hasEntityKGFrame.py  Edge_hasEntityKGFrame.pyi  Edge_hasEntityKGStatement.py  Edge_hasEntityKGStatement.pyi  Edge_hasEntityTypePartOfKGFrameType.py  Edge_hasEntityTypePartOfKGFrameType.pyi  Edge_hasEventKGFrame.py  Edge_hasEventKGFrame.pyi  Edge_hasGroupKGFrame.py  Edge_hasGroupKGFrame.pyi  Edge_hasIncomingKGRelationType.py  Edge_hasIncomingKGRelationType.pyi  Edge_hasInteractionKGDocument.py  Edge_hasInteractionKGDocument.pyi  Edge_hasInteractionKGEntity.py  Edge_hasInteractionKGEntity.pyi  Edge_hasInteractionKGFrame.py  Edge_hasInteractionKGFrame.pyi  Edge_hasKGAction.py  Edge_hasKGAction.pyi  Edge_hasKGActor.py  Edge_hasKGActor.pyi  Edge_hasKGAgent.py  Edge_hasKGAgent.pyi  Edge_hasKGAgentDuplicate.py  Edge_hasKGAgentDuplicate.pyi  Edge_hasKGAgentPublisher.py  Edge_hasKGAgentPublisher.pyi  Edge_hasKGAggregation.py  (+625 more)
domain-python/haley-ai-ml-python/: README.md  pyproject.toml  setup.py
domain-python/haley-ai-ml-python/ai_haley_ml_domain/domain-ontology/: haley-ai-ml-0.1.0.owl
domain-python/haley-ai-ml-python/ai_haley_ml_domain/model/: ActorMindRequest.py  ActorMindRequest.pyi  AddContextMindRequest.py  AddContextMindRequest.pyi  DomainOntology.py  Edge_hasFeatureValue.py  Edge_hasFeatureValue.pyi  Edge_hasHaleyIntentSlot.py  Edge_hasHaleyIntentSlot.pyi  Edge_hasHaleyIntentSlotIntance.py  Edge_hasHaleyIntentSlotIntance.pyi  Edge_hasPredictionModel.py  Edge_hasPredictionModel.pyi  Edge_hasPredictionModelInput.py  Edge_hasPredictionModelInput.pyi  Edge_hasPrompt.py  Edge_hasPrompt.pyi  Edge_hasPromptInput.py  Edge_hasPromptInput.pyi  Edge_hasRecommendationModel.py  Edge_hasRecommendationModel.pyi  Edge_hasRecommendationModelInput.py  Edge_hasRecommendationModelInput.pyi  Edge_hasSelectedPredictionModel.py  Edge_hasSelectedPredictionModel.pyi  Edge_hasSelectedPrompt.py  Edge_hasSelectedPrompt.pyi  Edge_hasSelectedRecommendationModel.py  Edge_hasSelectedRecommendationModel.pyi  Edge_hasTargetValue.py  Edge_hasTargetValue.pyi  FeatureGroup.py  FeatureGroup.pyi  FeatureType.py  FeatureType.pyi  FeatureValue.py  FeatureValue.pyi  HaleyIntent.py  HaleyIntent.pyi  HaleyIntentInstance.py  (+47 more)
domain-python/haley-ai-question-python/: README.md  pyproject.toml  setup.py
domain-python/haley-ai-question-python/com_vitalai_haleyai_question_domain/domain-ontology/: haley-ai-question-0.1.0.owl
domain-python/haley-python/: README.md  pyproject.toml  setup.py
domain-python/haley-taxonomy-python/: README.md  pyproject.toml  setup.py
domain-python/vital-aimp-python/: README.md  pyproject.toml  setup.py
domain-python/vital-social-python/: README.md  pyproject.toml  setup.py
vital-domain-python/: README.md  pyproject.toml  setup.py
vital-domain-python/vital_ai_domain/model/: Account.py  Account.pyi  AdminLogin.py  AdminLogin.pyi  BusinessOrganization.py  BusinessOrganization.pyi  CredentialsLogin.py  CredentialsLogin.pyi  Currency.py  Currency.pyi  DatascriptInfo.py  DatascriptInfo.pyi  DatascriptRun.py  DatascriptRun.pyi  DomainOntology.py  Duration.py  Duration.pyi  Edge_hasLoginAuth.py  Edge_hasLoginAuth.pyi  Edge_hasNextElement.py  Edge_hasNextElement.pyi  Edge_hasUserLogin.py  Edge_hasUserLogin.pyi  Edge_hasUserSession.py  Edge_hasUserSession.pyi  Edge_hasVitalOntNode.py  Edge_hasVitalOntNode.pyi  EmailAddress.py  EmailAddress.pyi  ErrorFact.py  ErrorFact.pyi  FileNode.py  FileNode.pyi  GeographicRegion.py  GeographicRegion.pyi  GovernmentOrganization.py  GovernmentOrganization.pyi  HyperEdge_hasFact.py  HyperEdge_hasFact.pyi  HyperEdge_hasHyperAnnotation.py  (+75 more)
(+5277 files in other folders)
