[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vital-ai-domain"
version = "0.1.9"
description = "VitalSigns vital domain"
readme = "README.md"
license = {text = "Apache License 2.0"}
authors = [{name = "Marc Hadfield", email = "marc@vital.ai"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "vital-ai-vitalsigns>=0.1.54",
]

[project.urls]
Homepage = "https://github.com/vital-ai/vitalhome-knowledge-graph"

[project.entry-points."vitalsigns_packages"]
"vital_ai_domain" = "vital_ai_domain"

[tool.setuptools.packages.find]
exclude = [
    "vitalhome",
]

[tool.setuptools.package-data]
"*" = [
    "*.pyi",
]
"vital_ai_domain" = [
    "vital-ontology/*.owl",
]
