[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vital-ai-haley-kg"
version = "0.1.25"
description = "VitalSigns haley kg domain"
readme = "README.md"
license = {text = "Apache License 2.0"}
authors = [{name = "Marc Hadfield", email = "marc@vital.ai"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "vital-ai-haley>=0.1.9",
    "vital-ai-haley-question>=0.1.7",
    "vital-ai-vitalsigns>=0.1.54",
]

[project.urls]
Homepage = "https://github.com/vital-ai/vitalhome-haley"

[project.entry-points."vitalsigns_packages"]
"ai_haley_kg_domain" = "ai_haley_kg_domain"

[tool.setuptools.packages.find]
exclude = []

[tool.setuptools.package-data]
"*" = [
    "*.pyi",
]
"ai_haley_kg_domain" = [
    "domain-ontology/*.owl",
]
