[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vital-ai-haley-question"
version = "0.1.7"
description = "VitalSigns haley question domain"
readme = "README.md"
license = {text = "Apache License 2.0"}
authors = [{name = "Marc Hadfield", email = "marc@vital.ai"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "vital-ai-haley-taxonomy>=0.1.7",
]

[project.urls]
Homepage = "https://github.com/vital-ai/vitalhome-haley"

[project.entry-points."vitalsigns_packages"]
"com_vitalai_haleyai_question_domain" = "com_vitalai_haleyai_question_domain"

[tool.setuptools.packages.find]
exclude = []

[tool.setuptools.package-data]
"*" = [
    "*.pyi",
]
"com_vitalai_haleyai_question_domain" = [
    "domain-ontology/*.owl",
]
