[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vital-ai-aimp"
version = "0.1.17"
description = "VitalSigns aimp domain"
readme = "README.md"
license = {text = "Apache License 2.0"}
authors = [{name = "Marc Hadfield", email = "marc@vital.ai"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "vital-ai-domain>=0.1.9",
    "vital-ai-social>=0.1.6",
    "vital-ai-nlp>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/vital-ai/vitalhome-aimp"

[project.entry-points."vitalsigns_packages"]
"com_vitalai_aimp_domain" = "com_vitalai_aimp_domain"

[tool.setuptools.packages.find]
exclude = []

[tool.setuptools.package-data]
"*" = [
    "*.pyi",
]
"com_vitalai_aimp_domain" = [
    "domain-ontology/*.owl",
]
